* https://www.squishlist.com/ims/satscan/66527/  - initial implementation of the uniform time model